--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Landscape</title>
+  <title>AI Landscape - Interactive Technology Visualization</title>
+  <meta name="description" content="Navigate through the AI technology ecosystem to discover the tools that power modern AI systems. Filter by categories to explore building blocks for your AI projects.">
+  <meta name="keywords" content="AI, artificial intelligence, machine learning, MLOps, AI tools, AI landscape, technology, data science, LLM, infrastructure, data layer">
+  <meta name="author" content="EggAI Technologies">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://eggai-tech.github.io/ai-landscape/">
+  <meta property="og:title" content="AI Landscape - Interactive Technology Visualization">
+  <meta property="og:description" content="Navigate through the AI technology ecosystem to discover the tools that power modern AI systems. Filter by categories to explore building blocks for your AI projects.">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://eggai-tech.github.io/ai-landscape/">
+  <meta property="twitter:title" content="AI Landscape - Interactive Technology Visualization">
+  <meta property="twitter:description" content="Navigate through the AI technology ecosystem to discover the tools that power modern AI systems. Filter by categories to explore building blocks for your AI projects.">
+  
+  <!-- Canonical link -->
+  <link rel="canonical" href="https://eggai-tech.github.io/ai-landscape/">
+
+  <!-- Favicon - You can add these if you have icon files -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23333'%3E%3Cpath d='M12 0C5.374 0 0 5.373 0 12C0 17.302 3.438 21.8 8.207 23.387C8.806 23.498 9 23.126 9 22.81V20.576C5.662 21.302 4.967 19.16 4.967 19.16C4.421 17.773 3.634 17.404 3.634 17.404C2.545 16.659 3.717 16.675 3.717 16.675C4.922 16.759 5.556 17.912 5.556 17.912C6.626 19.746 8.363 19.216 9.048 18.909C9.155 18.134 9.466 17.604 9.81 17.305C7.145 17 4.343 15.971 4.343 11.374C4.343 10.063 4.812 8.993 5.579 8.153C5.455 7.85 5.044 6.629 5.696 4.977C5.696 4.977 6.704 4.655 8.997 6.207C9.954 5.941 10.98 5.808 12 5.803C13.02 5.808 14.047 5.941 15.006 6.207C17.297 4.655 18.303 4.977 18.303 4.977C18.956 6.63 18.545 7.851 18.421 8.153C19.191 8.993 19.656 10.064 19.656 11.374C19.656 15.983 16.849 16.998 14.177 17.295C14.607 17.667 15 18.397 15 19.517V22.81C15 23.129 15.192 23.504 15.801 23.386C20.566 21.797 24 17.3 24 12C24 5.373 18.627 0 12 0Z'/%3E%3C/svg%3E">
+  
+  <!-- Fonts and Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/collapsible.css">
@@ -14,7 +37,7 @@
       <div class="logo">
         <h1>AI Landscape</h1>
       </div>
-      <a href="https://eggai-tech.github.io/ai-landscape" target="_blank" rel="noopener noreferrer">
+      <a href="https://github.com/eggai-tech/ai-landscape" target="_blank" rel="noopener noreferrer">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M12 0C5.374 0 0 5.373 0 12C0 17.302 3.438 21.8 8.207 23.387C8.806 23.498 9 23.126 9 22.81V20.576C5.662 21.302 4.967 19.16 4.967 19.16C4.421 17.773 3.634 17.404 3.634 17.404C2.545 16.659 3.717 16.675 3.717 16.675C4.922 16.759 5.556 17.912 5.556 17.912C6.626 19.746 8.363 19.216 9.048 18.909C9.155 18.134 9.466 17.604 9.81 17.305C7.145 17 4.343 15.971 4.343 11.374C4.343 10.063 4.812 8.993 5.579 8.153C5.455 7.85 5.044 6.629 5.696 4.977C5.696 4.977 6.704 4.655 8.997 6.207C9.954 5.941 10.98 5.808 12 5.803C13.02 5.808 14.047 5.941 15.006 6.207C17.297 4.655 18.303 4.977 18.303 4.977C18.956 6.63 18.545 7.851 18.421 8.153C19.191 8.993 19.656 10.064 19.656 11.374C19.656 15.983 16.849 16.998 14.177 17.295C14.607 17.667 15 18.397 15 19.517V22.81C15 23.129 15.192 23.504 15.801 23.386C20.566 21.797 24 17.3 24 12C24 5.373 18.627 0 12 0Z" fill="#333"/>
         </svg>
@@ -8123,10 +8146,10 @@
         © <span id="current-year"></span> EggAI Technologies. An open reference architecture.
       </div>
       <div class="links">
-        <a href="https://eggai-tech.github.io/ai-landscape" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/eggai-tech/ai-landscape" target="_blank" rel="noopener noreferrer">
           GitHub
         </a>
-        <a href="https://eggai-tech.github.io/ai-landscape" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/eggai-tech/ai-landscape" target="_blank" rel="noopener noreferrer">
           Documentation
         </a>
       </div>
